<resources>
    <string name="app_name">Whatsapp Clone</string>
    <string name="chatsToolbarText">Chats</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="register">Register</string>m
    <string name="members"> members</string>
    <string name="loadmore">Load more</string>
    <string name="searchuser">Search user</string>
    <string name="create">Create</string>
    <string name="chatname">Chat name</string>
</resources>